[package]
name = "rir"
version = "0.1.0"
authors = ["Tiago Lam <tiagolam@gmail.com>"]

[lib]
name = "rir"
path = "src/lib.rs"

[dependencies]
log = "0.3.6"
byteorder = "0.5.3"
lazy_static = "0.2.1"
chan = "0.1.18"
rand = "0.3.14"
timer = "0.1.6"
time = "0.1.35"

[dependencies.log4rs]
version = "0.4.8"
features = ["yaml"]
